# chess-rating

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  chess-rating.py  packaging.md  pyproject.toml  pytest.ini  rating.bat  requirements.txt  sample.env  sample_config.yaml  system_tests.md  tempmain  tempmain.bat  testmain.py  uscf_functions.md  with_coverage.cmd  with_coverage.py  with_coverage.sh
.claude/: settings.json
chess/: chess_rating.go  doc.go  mapreduce.go  parser.go  parser_test.go
docs/: overview.md  ports_and_adapters.md  system_tests.md  uscf_sections.md
docs/plans/issue#15/: design.md
plans/issue#13/: design.md  impl.md
plans/issue#15/: impl.md  requirements.md
rating/: __init__.py  __main__.py  base.py  chesscom.py  config_loader.py  fide.py  lichess.py  main.py  uscf.py
rating/adapters/: __init__.py  chesscom.py  fide.py  lichess.py  requests_http.py  sqlite_history.py  uscf.py
rating/application/: __init__.py  rating.py
rating/chess_com/: __init__.py  chesscom.py
rating/chess_com/tests/: __init__.py  test_chess_com.py
rating/domain/: __init__.py  models.py
rating/fide/: __init__.py  fide.py
rating/fide/tests/: __init__.py  test_fide.py
rating/lichess/: __init__.py
rating/lichess/tests/: pehanna.json  test_lichess.py
rating/ports/: __init__.py  history_port.py  http_port.py  rating_port.py
rating/uscf/: __init__.py  uscf.py
src/rating/: lichess.py  main.py
testdata/: __init__.py  chess.com.pehanna7.json  fide-john.html  jsoninput.txt
testdata/chesscom/: danbock.html  danbock.json  get_samples.sh  madmsk.html  madmsk.json  pehanna7.html  pehanna7.json
tests/: __init__.py  test_base.py  test_chess_com.py  test_config_loader.py  test_fide.py  test_http_get.py  test_lichess.py  test_live.py  test_rating_application.py  test_sqlite_history.py  test_uscf.py  test_uscf_extract_headers.py  test_uscf_extract_player_count.py  test_uscf_extract_player_data.py  uscf_functions.py
tests/testdata/: endpoints.txt  members.json  sections.json  uscf_functions.js
(+1 files in other folders)
