[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-rating"
version = "0.1.0"
authors = [
    {name = "Phil Hanna", email = "ph1204@gmail.com"}
]
description = "Chess rating"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "numpy"
]

[tool.setuptools]
packages = ["rating"]

