[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-rating"
version = "1.4.0"
authors = [
    {name = "Phil Hanna", email = "ph1204@gmail.com"}
]
description = "Chess rating"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "numpy",
    "platformdirs",
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
]

[project.scripts]
rating = "rating.application.rating:main"

[tool.setuptools]
packages = ["rating", "rating.application", "rating.domain", "rating.ports", "rating.adapters"]

[tool.pytest.ini_options]
markers = [
    "system: marks tests as system tests",
]
addopts = '-m "not system"'
required_plugins = [
    "pytest-cov",
]
